Added bare mode to evaluation

--- a/config/yarr_sample.yml
+++ b/config/yarr_sample.yml
@@ -21,6 +21,11 @@ evaluator:
         p begin
           %s
         end
+    bare:
+      :filter: []
+      :output: :truncate
+      :format: |
+        %s
     asm:
       :filter:
         '\': '\\'
