sorting out executables
This is not a gem but an app. It is not expected to be installed via gem install.

 * using shebang
 * chmod +x
 * dropping file extension
 * adding bundler/setup require

--- a/yarr.service
+++ b/yarr.service
@@ -8,7 +8,7 @@ User = yarr
 Group = yarr
 # Set to your apps location
 WorkingDirectory = /srv/yarr/yarr
-ExecStart=/usr/bin/bash -lc 'bundle exec ruby app/yarr.rb'
+ExecStart=/usr/bin/bash -lc 'bundle exec bin/yarr.rb'
 TimeoutSec=30
 RestartSec=15s
 Restart=always
