travis ci fix attempt no. 2

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 AllCops:
   Exclude:
-    - .bundle
-    - vendor
+    - .bundle/**/*
+    - vendor/**/*
 
 
 # reek disagrees, and complains about uncommunicative variable name
