Updates for ruby 3.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ AllCops:
   Exclude:
     - .bundle/**/*
     - vendor/**/*
+  NewCops: enable
 
 
 # reek disagrees, and complains about uncommunicative variable name
